# onlyPositiveAlpha

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  testing.ipynb
EDA/: README.md  __init__.py  insights.md  run_eda.py
EDA/core/: __init__.py  config.py  io.py  schema.py  utils.py
EDA/pipeline/: __init__.py  analysis.py  features.py
EDA/render/: __init__.py  plots.py
alphas/: __init__.py  cumulative_relative_book_strength.py  example_alpha.ipynb  relative_book_strength_regime_aware.py  spread_alpha.ipynb
backtester/: __init__.py  benchmarking.py  feature_generator.py  runner.py  runner_pipeline.py  runner_support.py
backtester/config/: __init__.py  normalization.py  types.py
backtester/loaders/: __init__.py  crypto_prices.py  market_events.py  resolution.py  runner_core.py
backtester/normalize/: __init__.py  market_lookup.py  schema.py
backtester/resolution/: __init__.py  manager.py  parsing.py
backtester/simulation/: __init__.py  analytics.py  execution_engine.py  fees.py  objective.py  risk_engine.py
data/: __init__.py
features/: __init__.py  crypto.py  order_book.py
models/: __init__.py  events.py
regimes/: MICRO_REGIME_ARCHITECTURE.md  MICRO_REGIME_SUMMARY.md  QUICK_START_MICRO_REGIME.md  README.md  __init__.py  alpha_integration.py  alpha_params.py  config.py  example.py  export_regime_data.py  export_regime_data_aggregated.py  feature_engineering.py  helpers.py  historical_regime_report.py  identifier.py  predictor.py  probability_estimator.py  regret_optimizer.py  test_alpha_integration.py  test_blended_implementation.py  test_regime_module.py  train_on_blended_data.py  train_on_real_data.py
report/: report_structure.md
scripts/: README.md  __init__.py  analyze_cumulative_signal_stability.py  analyze_underperforming_markets.py  build_resolution_from_mapping_vectors.py  build_updown_market_mapping.py  diagnose_batch_performance_variance.py  diagnose_cumulative_signal_reliability.py  diagnose_relative_book_oos_degradation.py  diagnose_relative_book_strategy.py  download_polymarket.py  generate_section6_report_figures.py  inspect_pmxt_orderbook_structure.py  prepare_market_backtest_dataset.py  run_regime_aware_hpo.py  run_regime_aware_oos_validation.py  run_relative_book_oos_validation.py  train_micro_regime_classifier.py  truncate_pmxt_by_tokens.py
tests/: __init__.py  conftest.py  prepared_helpers.py  test_backtest.py  test_backtester_modules.py  test_build_resolution_from_mapping_vectors.py  test_e2e_streaming.py  test_eda_sample_mode.py  test_execution_realism_slice.py  test_feature_generator_and_risk_engine.py  test_futurework_exact_alpha.py  test_historical_ccxt.py  test_market_events_loader_phase2.py  test_phase_roadmap_regressions.py  test_polymarket.py  test_prepare_market_backtest_dataset.py  test_reference_gamma.py  test_relative_book_recalibration.py  test_requirements_completion.py  test_resolution_validation.py  test_rtds.py  test_runner_mixins_unit.py  test_stream_storage.py  test_visualization.py  test_workstream_b_and_c_scaffolding.py
utils/: __init__.py  dataframes.py  logging_config.py  paths.py  serialization.py  timestamps.py  validation.py
visualization/: __init__.py  plots.py
(+3955 files in other folders)
